<resources>
    <string name="app_name">SchoolSystemApplication</string>
    <string name="student_name">Student Name</string>
    <string name="grade_level">Grade Level</string>
    <string name="list_of_students_ingrade">list_of_students_ingrade</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="id_number">ID Number</string>
    <string name="enter_id_number">Enter ID number</string>
    <string name="enter_email">Enter email</string>
    <string name="grade_levelAdd">Grade Level</string>
    <string name="enter_grade_level">Enter grade level</string>
    <string name="add">Add</string>
    <string name="add_student" />
    <string name="enter_parent_phone_number">Enter Parent Phone Number</string>
    <string name="parent_phone_number">Parent Phone Number</string>
    <string name="birth_certificte">Birth Certificte</string>
    <string name="chosen_files">Chosen Files:</string>
    <string name="browse">Browse</string>
    <string name="allstudents">allStudents</string>
    <string name="addSubject">Add Subject</string>
    <string name="editSubject">Edit Schedule</string>
    <string name="viewStudent">View Student</string>
    <string name="addStudent">Add Student</string>
    <string name="subject_name">Subject Name</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="Lecture_time">Lecture Time</string>
    <string name="day_time">Day/Time</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="ALLAssignment">ALL Assignment</string>
    <string name="email">Email</string>
    <string name="selection_of_hours_and_days">Selection of hours and days</string>
    <string name="_8_00">8:00</string>
    <string name="_8_50">8:50</string>
    <string name="_10_25">10:25</string>
    <string name="_9_35">9:35</string>
    <string name="_11_35">11:35</string>
    <string name="_12_20">12:20</string>
    <string name="_1_05">1:05</string>
    <string name="exam">Exam</string>
    <string name="type">Type</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="grade">Grade</string>
    <string name="date">Date</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="title_activity_registrars_home_page">RegistrarsHomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="full_mark">Full Mark</string>
    <string name="type_exam">Type Exam</string>
    <string name="next">NEXT</string>
    <string name="enter_type_exam">Enter type exam</string>
    <string name="enter_full_mark">Enter Full Mark</string>
    <string name="add_mark">Add new mark</string>
    <string name="list_Student">View Student</string>
    <string name="asg_name">Assignment Name</string>
    <string name="asg_desc">Description</string>
    <string name="asg_deadline">Deadline</string>
    <string name="asg_upl">Upload</string>
    <string name="label_asg_name">Assignment Name</string>
    <string name="label_asg_description">Assignment Description</string>
    <string name="label_asg_deadline">Deadline</string>
    <string name="label_asg_upload">Select File</string>
    <string name="title_activity_menu_teacher">Menu_Teacher_activity</string>
    <string name="schedule">Schedule</string>
    <string name="assignment">Assignment</string>
    <string name="marks">Marks</string>
    <string name="eg_grade_1">eg grade 1</string>
    <string name="app_info">App Info</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="subjects">Subjects</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="new_subject">New Subject</string>
    <string name="eg_social_studies">eg. Social Studies</string>
    <string name="grade_level_students">Grade Level Students</string>
    <string name="view_schedule">View Schedule</string>
    <string name="view_grade_levels">View Grade levels</string>
    <string name="edit">Edit</string>
    <string name="enter_gender">Enter gender</string>
    <string name="gender">Gender</string>


    <string name="submit_assignment_title">Submit Assignment</string>
    <string name="select_assignment_label">Select Assignment:</string>
    <string name="choose_file_button">Choose File</string>
    <string name="no_file_selected">No file selected</string>
    <string name="submit_button_text">Submit Assignment</string>
    <string name="file_ready_to_upload">File ready to upload!</string>
    <string name="please_select_file">Please select a file first.</string>
    <string name="teacher_panel">👨‍🏫 Teacher Panel</string>
    <string name="publish_grades">📝 Publish Grades</string>
    <string name="assignments">📚 Assignments</string>
    <string name="school_login">🔐 School Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="submit_assignment">📘 Submit Assignment</string>
    <string name="select_assignment">Select Assignment:</string>
    <string name="choose_file">📎 Choose File</string>
    <string name="no_file_selected2">No file selected</string>
    <string name="submit">🚀 Submit</string>
    <string name="back">Back</string>
    <string name="schedule_icon">Schedule Icon</string>
    <string name="grades_icon">Grades Icon</string>
    <string name="assignment_icon">Assignment Icon</string>
    <string name="submit_assignments">Submit Assignments</string>
    <string name="welcome_teacher">Welcome, Teacher</string>
    <string name="login2">Login</string>
    <string name="password2">Password</string>
    <string name="login3">Login</string>
    <string name="welcome_student">Welcome, Student</string>
    <string name="view_grades">View Grades</string>
    <string name="view_assignments">View Assignments</string>

    <string-array name="dark_mode_options">
        <item>On</item>
        <item>Off</item>
    </string-array>


</resources>